code/fuse/soap-cxfws-service/src/main/fabric8/soap-default-route.yml
apiVersion: route.openshift.io/v1
kind: Route
spec:
  port:
    targetPort: 8181
  to:
    kind: Service
    name: soap-cxfws-service
    weight: 100
  wildcardPolicy: None
status: {}
